--- a/README.me
+++ b/README.me
@@ -1,6 +1,6 @@
 # docker-wrk2
 
-It's a Docker container with [wrk2](https://github.com/giltene/wrk2).
+It's [wrk2](https://github.com/giltene/wrk2) as a Docker image.
 
 ## Just tell me what to do.
 
